--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </ul>
             </div>
             <div class="card-footer">
-              <a href="STRIPE_LINK_TBD" class="btn btn-outline btn-block">Subscribe</a>
+              <a href="https://buy.stripe.com/3cI3cu0PS16W1fF3qg8k801" class="btn btn-outline btn-block">Subscribe</a>
             </div>
           </article>
         </div>
